--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -5,9 +5,13 @@
     }
 }
 .address {
-    font-family: monospace;
+    font-family: $font-family;
 
     p { margin: 0; }
+}
+
+.addrline {
+    font-size: 0.75em;
 }
 
 .news {
