--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,12 +5,12 @@
 $base-font-size: 16px !default;
 $small-font-size:  0.875rem !default;
 $bold-font-weight: bold !default;
-$font-family: Helvetica, Arial, sans-serif !default;
+$font-family: 'IBM Plex Sans', Helvetica, 'Helvetica Neue', Arial, sans-serif !default;
 $line-height: 1.5 !default;
-$heading-font-family: Helvetica, sans-serif !default;
+$heading-font-family: 'IBM Plex Sans', Helvetica, 'Helvetica Neue', Arial, sans-serif !default;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
-$monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
+$monospace-font-family: Menlo, Monaco, Consolas, monospace !default;
 $h1: 2.998rem !default;
 $h2: 1.5rem !default;
 $h3: 1.25rem !default;
